fix(ui): render tab instead of channel and forward pointers

--- a/platform/src/testFixtures/resources/test-config.yml
+++ b/platform/src/testFixtures/resources/test-config.yml
@@ -10,7 +10,7 @@ channels:
       protected: true
       auto_join: true
       message_format: "<yellow><source.display_name><gray>: <text>"
-      active_channel_format: "<red><underlined><channel.name>"
+      active_tab_format: "<red><underlined><channel.name>"
   global:
     name: Global
     settings:
