--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,9 @@ working/*
 !working/server.properties
 /.idea/
 
-bukkit/src/**/plugin.yml
+# MkDocs
+
+site/
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
