--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,11 +4,79 @@ site_author: Silthus
 
 repo_name: sVoxelDev/sChat
 repo_url: https://github.com/sVoxelDev/sChat
-edit_uri: ""
+edit_uri: edit/next/docs/
+
+copyright: Copyright &copy; 2021 - 2022 sVoxelDev
+
+nav:
+  - Home:
+    - index.md
+  - Getting Started:
+    - getting-started/index.md
+  - Configuration:
+    - configuration/index.md
+    - Channel: configuration/channel.md
+  - Developer API:
+    - developer/index.md
 
 theme:
   name: material
-  custom_dir: docs-overrides
+  logo: assets/logo.png
+  favicon: assets/favicon.png
+  custom_dir: docs/overrides
+  icon:
+    repo: fontawesome/brands/github
+  palette:
+    - media: "(prefers-color-scheme: light)" 
+      scheme: default
+      primary: indigo
+      accent: orange
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)" 
+      scheme: slate
+      primary: black
+      accent: orange
+      toggle:
+        icon: material/weather-night
+        name: Switch to light mode
+  features:
+    - header.autohide
+    - navigation.instant
+    - navigation.tracking
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.indexes
+    - navigation.top
+
+markdown_extensions:
+  - attr_list
+  - md_in_html
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - toc:
+        permalink: true
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  
+plugins:
+  - search
+  - git-revision-date-localized:
+      enable_creation_date: true
 
 extra:
   version:
