--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -98,15 +98,19 @@ jobs:
     if: github.ref == 'refs/heads/next'
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # required by mike deploy
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
       
       - name: Install pip dependencies
-        run: pip install mkdocs-material mkdocs-git-revision-date-localized-plugin mike
+        run: pip install -r requirements.txt
 
       - name: Deploy Documentation
         run: mike deploy --prefix docs --push --update-aliases next latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   release:
     needs: [ build, test ]
@@ -116,6 +120,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # required by mike deploy
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
@@ -132,7 +138,7 @@ jobs:
           python-version: '3.x'
       
       - name: Install pip dependencies
-        run: pip install mkdocs-material mkdocs-git-revision-date-localized-plugin mike
+        run: pip install -r requirements.txt
 
       - name: Release
         env:
