docs: open javadocs in new tab

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - Channel: configuration/channel.md
   - Developer API:
     - developer/index.md
+  - Javadocs: https://schat.silthus.net/javadocs/" target="_blank
 
 theme:
   name: material
