refactor: move all view update logic into the view

--- a/platform/src/testFixtures/resources/test-config.yml
+++ b/platform/src/testFixtures/resources/test-config.yml
@@ -1,6 +1,6 @@
 messenger: mock
 view:
-  message_format: "<aqua><<source.display_name>></aqua>: <text>"
+  message_format: "<aqua>[<source.display_name>]</aqua>: <text>"
 private_chat:
   message_format: "<red><source.display_name><gray>: <text>"
 channels:
