feat(config): provide access to various tab settings

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -74,6 +74,7 @@ adventure-api = { module = "net.kyori:adventure-api", version.ref = "adventure-a
 adventure-minimessage = { module = "net.kyori:adventure-text-minimessage", version.ref = "adventure-api" }
 adventure-plain = { module = "net.kyori:adventure-text-serializer-plain", version.ref = "adventure-api" }
 adventure-gson = { module = "net.kyori:adventure-text-serializer-gson", version.ref = "adventure-api" }
+adventure-configurate = { module = "net.kyori:adventure-serializer-configurate4", version.ref = "adventure-api" }
 
 adventure-platform = { module = "net.kyori:adventure-platform-api", version.ref = "adventure-platform" }
 adventure-platform-bukkit = { module = "net.kyori:adventure-platform-bukkit", version.ref = "adventure-platform" }
@@ -112,7 +113,8 @@ configurate = [
     "configurate-yaml",
     "configurate-xml",
     "configurate-hocon",
-    "configurate-gson"
+    "configurate-gson",
+    "adventure-configurate"
 ]
 cloud-commands = [
     "cloud-commands",
