--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     github.com/project-slug: sVoxelDev/sChat
 spec:
-  type: other
+  type: service
   lifecycle: unknown
   owner: guests
